fix: dark mode

--- a/src/styles.css
+++ b/src/styles.css
@@ -73,13 +73,11 @@ body {
 .img-area {
     width: 100%;
     height: 256px;
+
     margin-top: 25px;
     overflow: hidden;
     border-radius: 15px;
     box-shadow: 0px 6px 15px var(--light-shadow);
-    display: flex;
-    align-items: center;
-    justify-content: center;
 }
 
 .text-area {
@@ -349,6 +347,9 @@ ul li.playing {
 .is-dark .bxs-moon {
     opacity: 1;
     visibility: visible;
+}
+
+.is-dark .bxs-moon {
     color: var(--white-mode);
 }
 
